--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <style>
+      
+    </style>
     <meta charset="UTF-8">
     <title>Exceptional Realty Group - Luxury Homes - About</title>
     <!-- Don't forget to link your CSS file! -->
